# WhichKey-OB64

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json  xmake.lua
cmake/: plugin.cpp.in  plugin.rc.in
src/: config.h  key_manager.h  main.cpp  pch.h  types.h  which_key.h
